# fastapi-practice

./: .env-example  .gitignore  LICENSE  README.md  example_models.py  main.py  pyproject.toml  websocket-example.html  websocket_example.py
.github/workflows/: greetings.yml
